--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,24 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run tests
+          pip install flake8 black
+      - name: Lint (flake8)
+        run: flake8 .
+      - name: Black check
+        run: black --check .
+      - name: Run pytest
         run: python -m pytest
+      - name: Docker build (API)
+        working-directory: .
+        run: docker build -f Dockerfile.api -t api-test .
+      - name: Docker compose smoke test (API up)
+        working-directory: .
+        run: |
+          docker compose up -d db
+          docker compose up -d api
+          sleep 10
+          curl --retry 5 --retry-delay 5 --fail http://localhost:8000/health
+          docker compose down
 
   frontend:
     runs-on: ubuntu-latest
@@ -36,6 +52,11 @@ jobs:
           cache-dependency-path: dashboard-ui/package-lock.json
       - name: Install deps
         run: npm ci --legacy-peer-deps
-      - name: Lint/test/build
-        run: |
-          npm run build --if-present
+      - name: Build
+        env:
+          CI: "true"
+        run: npm run build
+      - name: Test
+        env:
+          CI: "true"
+        run: npm test -- --watch=false
