--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -6,3 +6,6 @@ python-dateutil==2.9.0
 pydantic==2.7.4
 pytest==8.3.2
 httpx==0.27.2
+python-json-logger==2.0.7
+prometheus-client==0.20.0
+asyncpg==0.29.0
